--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ figure {
 }
 .img-placeholder {
   width: 140px;
-  height: 140px;
+  height: 187px;
   z-index: -1;
 }
 .frame-triangle-top {
@@ -190,6 +190,46 @@ figure {
   color: #639033;
 }
 
+/************/
+/* PROJECTS */
+/************/
+#project-list {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+@media only screen and (min-width: 768px) {
+  #project-list {
+    padding: 0 1rem;
+  }
+}
+@media only screen and (min-width: 992px) {
+  #project-list {
+    padding: 0 2rem;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+    grid-column-gap: 2rem;
+    grid-row-gap: 2rem;
+  }
+}
+#project-list > li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 1rem 2rem;
+  margin-bottom: 2rem;
+}
+#project-list h4 > .app-link {
+  font-family: 'Lato', sans-serif;
+}
+#project-list video {
+  max-width: 800px;
+  width: calc(100% + 4rem);
+  margin: 0 -2rem -1rem -2rem;
+}
 
 /**********/
 /* LAYOUT */
@@ -272,15 +312,30 @@ nav.side-nav a:hover, nav.side-nav a:active {
 }
 
 
+
 nav.title-nav > ul {
   margin: 0 auto -1rem auto;
   padding: 1rem 0 0 0;
+  display: flex;
   justify-content: center;
   color: #fff;
 }
+#email {
+  display: none;
+}
+@media only screen and (min-width: 768px) {
+  #email {
+    display: inline;
+  }
+}
+@media only screen and (min-width: 400px) {
+  nav.title-nav > ul > li {
+    margin: 0 1rem;
+  }
+}
 nav.title-nav > ul > li {
   display: block;
-  margin: 0 1rem;
+  margin: 0 0.4rem;
 }
 
 
