--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ p {
 
 section .content {
   display: grid;
+  display: -ms-grid;
   grid-template-columns: 50% 50%;
+  -ms-grid-columns: 50% 50%;
 }
 
 .header-background {
@@ -108,6 +110,16 @@ section h2, section h4 {
   color: #fff;
   font-weight: normal;
 }
+.summary {
+  -ms-grid-column: 1;
+  -ms-grid-row: 2;
+  width: 100%;
+}
+.skills {
+  -ms-grid-column: 3;
+  -ms-grid-row: 2;
+  width: calc(100% - 4rem);
+}
 figure {
   width: 140px;
   border: 1px solid #639033;
@@ -154,7 +166,6 @@ figure {
 }
 
 .skills-list {
-  grid-column: 2 / 3;
   margin: 0 auto 3rem auto;
   text-align: center;
 }
@@ -170,17 +181,69 @@ figure {
 @media only screen and (min-width: 768px) {
   .skills-list ul {
     display: grid;
+    display: -ms-grid;
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto auto;
-    grid-column-gap: 1rem;
+    -ms-grid-columns: 33.3% 33.3% 33.3%;
+    -ms-grid-rows: 4rem 4rem 4rem;
+  }
+  .skills-list ul > li {
+    margin-right: 1rem;
+  }
+  .skills-list li:nth-child(1), .skills-list li:nth-child(2), .skills-list li:nth-child(3) {
+    -ms-grid-row: 1;
+  }
+  .skills-list li:nth-child(4), .skills-list li:nth-child(5), li:nth-child(6) {
+    -ms-grid-row: 2;
+  }
+  .skills-list li:nth-child(7), .skills-list li:nth-child(8) {
+    -ms-grid-row: 3;
+  }
+  .skills-list li:nth-child(1), .skills-list li:nth-child(4), .skills-list li:nth-child(7) {
+    -ms-grid-column: 1;
+  }
+  .skills-list li:nth-child(2), .skills-list li:nth-child(5), .skills-list li:nth-child(8) {
+    -ms-grid-column: 2;
+  }
+  .skills-list li:nth-child(3), .skills-list li:nth-child(6) {
+    -ms-grid-column: 3;
   }
 }
+
 @media only screen and (min-width: 1200px) {
   .skills-list ul {
     grid-template-columns: auto auto auto auto auto auto;
     grid-template-rows: auto auto;
+    -ms-grid-columns: 20% 20% 20% 20% 20%;
+    -ms-grid-rows: 4rem 4rem;
+  }
+  .skills-list li:nth-child(1), .skills-list li:nth-child(2), .skills-list li:nth-child(3),
+  .skills-list li:nth-child(4), .skills-list li:nth-child(5) {
+    -ms-grid-row: 1;
+  }
+  .skills-list li:nth-child(6), .skills-list li:nth-child(7) {
+    -ms-grid-row: 2;
+  }
+  li:nth-child(8) {
+      -ms-grid-row: 2 !important;
+  }
+  .skills-list li:nth-child(1), .skills-list li:nth-child(6) {
+    -ms-grid-column: 1;
+  }
+  .skills-list li:nth-child(2), .skills-list li:nth-child(7) {
+    -ms-grid-column: 2;
+  }
+  .skills-list li:nth-child(3), .skills-list li:nth-child(8) {
+    -ms-grid-column: 3;
+  }
+  .skills-list li:nth-child(4) {
+    -ms-grid-column: 4;
+  }
+  .skills-list li:nth-child(5) {
+    -ms-grid-column: 5;
   }
 }
+
 .skills-list ul > li {
   display: block;
   padding: 1rem;
@@ -193,28 +256,52 @@ figure {
 /************/
 /* PROJECTS */
 /************/
-#project-list {
-  list-style-type: none;
-  padding: 0;
+#projects {
   display: flex;
   flex-direction: column;
 }
+#projects ul {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+#projects ul {
+  list-style-type: none;
+  padding: 0;
+}
 @media only screen and (min-width: 768px) {
-  #project-list {
+  #projects ul {
     padding: 0 1rem;
   }
 }
 @media only screen and (min-width: 992px) {
-  #project-list {
+  #projects ul {
     padding: 0 2rem;
+  }
+  #projects ul {
     display: grid;
+    display: -ms-grid;
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto;
+    -ms-grid-columns: 47.5% 5% 47.5%;
+    -ms-grid-rows: auto auto auto;
     grid-column-gap: 2rem;
     grid-row-gap: 2rem;
   }
+  #projects li:nth-child(1), #projects li:nth-child(2) {
+    -ms-grid-row: 1;
+  }
+  #projects li:nth-child(3), #projects  li:nth-child(4) {
+    -ms-grid-row: 2;
+  }
+  #projects li:nth-child(1), #projects li:nth-child(3) {
+    -ms-grid-column: 1;
+  }
+  #projects li:nth-child(2), #projects li:nth-child(4) {
+    -ms-grid-column: 3;
+  }
 }
-#project-list > li {
+#projects li {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -222,10 +309,10 @@ figure {
   padding: 1rem 2rem;
   margin-bottom: 2rem;
 }
-#project-list h4 > .app-link {
+#projects h4 > .app-link {
   font-family: 'Lato', sans-serif;
 }
-#project-list video {
+#projects video {
   max-width: 800px;
   width: calc(100% + 4rem);
   margin: 0 -2rem -1rem -2rem;
@@ -237,11 +324,14 @@ figure {
 main {
   background-color: #391427;
   display: grid;
+  display: -ms-grid;
   grid-template-columns: 130px calc(100% - 130px);
+  -ms-grid-columns: 130px calc(100% - 130px);
 }
 @media only screen and (min-width: 768px) {
   main {
     grid-template-columns: 130px calc(95% - 130px);
+    -ms-grid-columns: 130px calc(95% - 130px);
   }
 }
 section {
@@ -249,6 +339,7 @@ section {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+  -ms-grid-column: 2;
 }
 section > h2 {
   padding-left: 4rem;
@@ -261,16 +352,20 @@ section > div {
 @media only screen and (min-width: 992px) {
   section {
     display: grid;
+    display: -ms-grid;
     justify-items: start;
     align-items: start;
     grid-column-gap: 3rem;
   }
   section > h2 {
     grid-column: 1 / 3;
+    -ms-grid-column: 1;
   }
   #about {
     grid-template-columns: 25% 75%;
     grid-template-rows: auto auto;
+    -ms-grid-columns: 25% 3% 72%;
+    -ms-grid-rows: auto auto;
   }
 }
 
@@ -280,6 +375,7 @@ section > div {
 /**************/
 nav {
   font-family: 'Cinzel', serif;
+  -ms-grid-column: 1;
 }
 nav ul {
   list-style-type: none;
