--- a/style.css
+++ b/style.css
@@ -7,320 +7,13 @@ body {
 p {
   text-align: justify;
 }
-
-section .content {
-  display: grid;
-  display: -ms-grid;
-  grid-template-columns: 50% 50%;
-  -ms-grid-columns: 50% 50%;
-}
-
-.header-background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #391427;
-  z-index: -1;
-}
-
-#sierpinskiTriangle {
-  position: absolute;
-  top: 2.5rem;
-}
-
-hgroup {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: auto;
-}
-
-header>hgroup {
-  height: calc(100vh - 2rem);
-  max-width: 550px;
-}
-
-.next-button {
-  position: absolute;
-  top: calc(50% + 4.5rem);
-  left: 50%;
-}
-.next-button a {
-  color: rgba(255, 255, 255, 0.5);
-  font-size: 3rem;
-}
-.next-button a:hover, .next-button a:active {
-  color: rgb(255, 255, 255);
-}
-
-@media only screen and (min-width: 768px) {
-  .next-button {
-    top: calc(50% - 1rem);
-    left: 95%;
-  }
-}
-
-h1 {
-  text-align: center;
-  font-weight: normal;
-  border-top: solid 1px #fff;
-  border-bottom: solid 1px #fff;
-  background-color: rgba(0, 0, 0, 0.5);
-  box-shadow: 10px 0 20px rgba(0, 0, 0, 0.5), -10px 0 20px rgba(0, 0, 0, 0.5);
-  font-size: 24px;
-  padding: 0 1rem;
-}
-@media only screen and (min-width: 768px) {
-  h1 {
-    font-size: 32px;
-  }
-}
-
 h1, h2, h4 {
   font-family: 'Cinzel', serif;
 }
 
-
-/************/
-/* BUTTTONS */
-/************/
-.button-primary {
-  box-sizing: border-box;
-  display: inline-block;
-  background-color: #639033;
-  color: #391427;
-  font-family: 'Cinzel', serif;
-  font-size: 1.2rem;
-  margin-top: 2rem;
-  padding: 0.5rem 1rem;
-  border: none;
-}
-.button-primary:hover {
-  background-color: #95C265;
-  cursor: pointer;
-}
-.button-primary:active, .button-primary:focus {
-  outline-color: #95C265;
-}
-
-/************/
-/* ABOUT ME */
-/************/
-section h2, section h4 {
-  color: #fff;
-  font-weight: normal;
-}
-.summary {
-  -ms-grid-column: 1;
-  -ms-grid-row: 2;
-  width: 100%;
-}
-.skills {
-  -ms-grid-column: 3;
-  -ms-grid-row: 2;
-  width: calc(100% - 4rem);
-}
-figure {
-  width: 140px;
-  border: 1px solid #639033;
-  margin: 1rem 0;
-  padding: 3px;
-  position: relative;
-}
-@media only screen and (min-width: 768px) {
-  figure {
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-}
-.img-placeholder {
-  width: 140px;
-  height: 187px;
-  z-index: -1;
-}
-.frame-triangle-top {
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  width: 50px;
-  height: 50px;
-  border-top: 1px solid #639033;
-  border-left: 1px solid #639033;
-}
-.frame-triangle-bottom {
-  position: absolute;
-  bottom: -5px;
-  right: -5px;
-  width: 50px;
-  height: 50px;
-  border-bottom: 1px solid #639033;
-  border-right: 1px solid #639033;
-}
-.frame-background {
-  position: absolute;
-  top: -4px;
-  left: -4px;
-  width: calc(100% - 8px);
-  height: calc(100% - 8px);
-  border: 8px solid rgba(0, 0, 0, 0.4);
-}
-
-.skills-list {
-  margin: 0 auto 3rem auto;
-  text-align: center;
-}
-.skills-list > h4 {
-  margin-top: 0;
-}
-.skills-list ul {
-  padding: 0;
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-}
-@media only screen and (min-width: 768px) {
-  .skills-list ul {
-    display: grid;
-    display: -ms-grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
-    -ms-grid-columns: 33.3% 33.3% 33.3%;
-    -ms-grid-rows: 4rem 4rem 4rem;
-  }
-  .skills-list ul > li {
-    margin-right: 1rem;
-  }
-  .skills-list li:nth-child(1), .skills-list li:nth-child(2), .skills-list li:nth-child(3) {
-    -ms-grid-row: 1;
-  }
-  .skills-list li:nth-child(4), .skills-list li:nth-child(5), li:nth-child(6) {
-    -ms-grid-row: 2;
-  }
-  .skills-list li:nth-child(7), .skills-list li:nth-child(8) {
-    -ms-grid-row: 3;
-  }
-  .skills-list li:nth-child(1), .skills-list li:nth-child(4), .skills-list li:nth-child(7) {
-    -ms-grid-column: 1;
-  }
-  .skills-list li:nth-child(2), .skills-list li:nth-child(5), .skills-list li:nth-child(8) {
-    -ms-grid-column: 2;
-  }
-  .skills-list li:nth-child(3), .skills-list li:nth-child(6) {
-    -ms-grid-column: 3;
-  }
-}
-
-@media only screen and (min-width: 1200px) {
-  .skills-list ul {
-    grid-template-columns: auto auto auto auto auto auto;
-    grid-template-rows: auto auto;
-    -ms-grid-columns: 20% 20% 20% 20% 20%;
-    -ms-grid-rows: 4rem 4rem;
-  }
-  .skills-list li:nth-child(1), .skills-list li:nth-child(2), .skills-list li:nth-child(3),
-  .skills-list li:nth-child(4), .skills-list li:nth-child(5) {
-    -ms-grid-row: 1;
-  }
-  .skills-list li:nth-child(6), .skills-list li:nth-child(7) {
-    -ms-grid-row: 2;
-  }
-  li:nth-child(8) {
-      -ms-grid-row: 2 !important;
-  }
-  .skills-list li:nth-child(1), .skills-list li:nth-child(6) {
-    -ms-grid-column: 1;
-  }
-  .skills-list li:nth-child(2), .skills-list li:nth-child(7) {
-    -ms-grid-column: 2;
-  }
-  .skills-list li:nth-child(3), .skills-list li:nth-child(8) {
-    -ms-grid-column: 3;
-  }
-  .skills-list li:nth-child(4) {
-    -ms-grid-column: 4;
-  }
-  .skills-list li:nth-child(5) {
-    -ms-grid-column: 5;
-  }
-}
-
-.skills-list ul > li {
-  display: block;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  background-color: rgba(0, 0, 0, 0.4);
-  font-size: 1.1rem;
-  color: #639033;
-}
-
-/************/
-/* PROJECTS */
-/************/
-#projects {
-  display: flex;
-  flex-direction: column;
-}
-#projects ul {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-#projects ul {
-  list-style-type: none;
-  padding: 0;
-}
-@media only screen and (min-width: 768px) {
-  #projects ul {
-    padding: 0 1rem;
-  }
-}
-@media only screen and (min-width: 992px) {
-  #projects ul {
-    padding: 0 2rem;
-  }
-  #projects ul {
-    display: grid;
-    display: -ms-grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto;
-    -ms-grid-columns: 47.5% 5% 47.5%;
-    -ms-grid-rows: auto auto auto;
-    grid-column-gap: 2rem;
-    grid-row-gap: 2rem;
-  }
-  #projects li:nth-child(1), #projects li:nth-child(2) {
-    -ms-grid-row: 1;
-  }
-  #projects li:nth-child(3), #projects  li:nth-child(4) {
-    -ms-grid-row: 2;
-  }
-  #projects li:nth-child(1), #projects li:nth-child(3) {
-    -ms-grid-column: 1;
-  }
-  #projects li:nth-child(2), #projects li:nth-child(4) {
-    -ms-grid-column: 3;
-  }
-}
-#projects li {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 1rem 2rem;
-  margin-bottom: 2rem;
-}
-#projects h4 > .app-link {
-  font-family: 'Lato', sans-serif;
-}
-#projects video {
-  max-width: 800px;
-  width: calc(100% + 4rem);
-  margin: 0 -2rem -1rem -2rem;
-}
-
-/**********/
-/* LAYOUT */
-/**********/
+/******************/
+/* GENERAL LAYOUT */
+/******************/
 main {
   background-color: #391427;
   display: grid;
@@ -361,13 +54,63 @@ section > div {
     grid-column: 1 / 3;
     -ms-grid-column: 1;
   }
-  #about {
-    grid-template-columns: 25% 75%;
-    grid-template-rows: auto auto;
-    -ms-grid-columns: 25% 3% 72%;
-    -ms-grid-rows: auto auto;
+}
+section .content {
+  display: grid;
+  display: -ms-grid;
+  grid-template-columns: 50% 50%;
+  -ms-grid-columns: 50% 50%;
+}
+.next-button {
+  position: static;
+  padding-top: 2rem;
+}
+.next-button a {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 3rem;
+}
+.next-button a:after {
+  content: '⇓';
+}
+.next-button a:hover, .next-button a:active {
+  color: rgb(255, 255, 255);
+}
+@media only screen and (min-width: 992px) {
+  .next-button a:after {
+    content: '➤';
+    font-size: 2rem;
+  }
+  .next-button {
+    position: fixed;
+    top: calc(50% - 1rem);
+    left: calc(100% - 42px);
   }
 }
+
+
+/************/
+/* BUTTTONS */
+/************/
+.button-primary {
+  box-sizing: border-box;
+  display: inline-block;
+  background-color: #639033;
+  color: #391427;
+  font-family: 'Cinzel', serif;
+  font-size: 1.2rem;
+  margin-top: 2rem;
+  padding: 0.5rem 1rem;
+  border: none;
+}
+.button-primary:hover {
+  background-color: #95C265;
+  cursor: pointer;
+}
+.button-primary:active, .button-primary:focus {
+  outline-color: #95C265;
+}
+
+
 
 
 /**************/
@@ -384,6 +127,7 @@ nav ul {
 nav.side-nav {
   border-right: 1px solid rgb(156,137,147);
   background-color: rgba(0, 0, 0, 0.3);
+  padding: 2rem 0;
 }
 nav.side-nav > ul {
   margin: 0 1rem 0 0;
@@ -406,8 +150,6 @@ nav.side-nav a:hover, nav.side-nav a:active {
   color: #fff;
   text-decoration: none
 }
-
-
 
 nav.title-nav > ul {
   margin: 0 auto -1rem auto;
